2016-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Basic flag handling in notUsed(), more accurate notUsed().
	* src/stm8/peeph.def:
	  Enable dead load optimization (with fixed flag handling).

2016-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Improve labelIsReturnOnly() accuracy.
	* src/stm8/peeph.def:
	  Disable dead load optimization, introduce jump-to-return optimization.

2016-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Use more jumps on false for stm8 peepholes.
	* src/stm8/gen.c:
	  More efficient comparisons.

2016-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in:
	  Fix distclean failures.

2016-05-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/sdbinutils/binutils/arlex.c,
	* support/sdbinutils/binutils/arparse.c,
	* support/sdbinutils/binutils/arparse.h,
	* support/sdbinutils/binutils/defparse.c,
	* support/sdbinutils/binutils/defparse.h,
	* support/sdbinutils/binutils/mcparse.c,
	* support/sdbinutils/binutils/mcparse.h,
	* support/sdbinutils/binutils/rcparse.c,
	* support/sdbinutils/binutils/rcparse.h,
	* support/sdbinutils/binutils/sysinfo.c,
	* support/sdbinutils/binutils/sysinfo.h,
	* support/sdbinutils/binutils/syslex.c: added, as in upstream git

2016-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkelf.c:
	  Enable ELF symbol table output, (from patch #255 by Peter Dons Tychsen).

2016-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup, also gets rid of a GCC warning.

2016-05-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* src/SDCCmain.c
	  Call setrlimit() in a more compatible way.

2016-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/_setjmp.c,
	* device/lib/s08/_setjmp.c: svn eol-style native
	* support/regression/tests/gcc-torture-execute-pr28982a.c,
	* support/regression/tests/bug-2197.c: enabled for mcs51