@@ -30,7 +30,6 @@ static void
 testwcharrestart(void)
 {
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 	static mbstate_t ps;
 	wchar_t w;
 	char c[MB_LEN_MAX];
@@ -40,14 +39,12 @@ testwcharrestart(void)
 	ASSERT(wcrtomb(c, w, &ps) == 1);
 	ASSERT(c[0] == 'C');
 #endif
-#endif
 }
 
 static void
 testchar16restart(void)
 {
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 	static mbstate_t ps;
 	char16_t c16[2];
 	char c[MB_LEN_MAX];
@@ -57,14 +54,12 @@ testchar16restart(void)
 	ASSERT(c16rtomb(c, c16[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
 #endif
-#endif
 }
 
 static void
 testchar32restart(void)
 {
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 	static mbstate_t ps;
 	char32_t c32[2];
 	char c[MB_LEN_MAX];
@@ -73,7 +68,6 @@ testchar32restart(void)
 	ASSERT(mbrtoc32(c32, c, 1, &ps) == 1);
 	ASSERT(c32rtomb(c, c32[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
-#endif
 #endif
 }
 
