@@ -1,3 +1,8 @@
+2016-05-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/ralloc.c: fixed bug #2489
+	* support/regression/tests/wchar.c: re-enable hc08/s08 tests
+
 2016-05-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/peep.c:
